--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bot-md",
     "whatsapp-multi-device"
   ],
-  "base": "https://github.com/harshitethic",
+  "base": "https://github.com/adinarayana02",
   "author": "harshitethic",
   "license": "MIT",
   "dependencies": {
