--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "whatsapp-multi-device"
   ],
   "base": "https://github.com/adinarayana02",
-  "author": "harshitethic",
+  "author": "adinarayana",
   "license": "MIT",
   "dependencies": {
     "@adiwajshing/baileys": "4.4.0",
@@ -41,10 +41,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/harshitethic/whatsapp-chatgpt.git"
+    "url": "git+https://github.com/adinarayana02/whatsapp_bot.git"
   },
   "bugs": {
-    "url": "https://github.com/harshitethic/whatsapp-chatgpt/issues"
+    "url": "https://github.com/adinarayana02/whatsapp_bot/issues"
   },
-  "homepage": "https://github.com/harshitethic/whatsapp-chatgpt#readme"
+  "homepage": "https://github.com/adinarayana02/whatsapp_bot #readme"
 }
